--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,11 @@
+set(CMAKE_BUILD_TYPE Release)
+
 rock_library(video_capture_vlc
     SOURCES VlcCapture.cpp
     HEADERS VlcCapture.h
     DEPS_PKGCONFIG opencv
     LIBS vlc)
 
-Rock_executable(video_capture_vlc_stream stream.cpp
+Rock_executable(video_capture_vlc_stream Main.cpp
     DEPS video_capture_vlc)
 
