Revert "Instead of using the smem output driver of VLC, we now interact direc…"

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,7 @@ rock_library(video_capture_vlc
     SOURCES VlcCapture.cpp
     HEADERS VlcCapture.h
     DEPS_PKGCONFIG opencv
-    LIBS vlc harfbuzz freetype)
+    LIBS vlc)
 
 Rock_executable(video_capture_vlc_stream Main.cpp
     DEPS video_capture_vlc)
