Added -lharfbuzz and -lfreetype under Libs.

--- a/src/video_capture_vlc.pc.in
+++ b/src/video_capture_vlc.pc.in
@@ -7,6 +7,6 @@ Name: @TARGET_NAME@
 Description: @PROJECT_DESCRIPTION@
 Version: @PROJECT_VERSION@
 Requires: @PKGCONFIG_REQUIRES@
-Libs: -L${libdir} -l@TARGET_NAME@ @PKGCONFIG_LIBS@ -lvlc 
+Libs: -L${libdir} -l@TARGET_NAME@ @PKGCONFIG_LIBS@ -lvlc -lharfbuzz -lfreetype
 Cflags: -I${includedir} @PKGCONFIG_CFLAGS@
 
