pick opencv4 explicitely (needed on ubuntu 20.04)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,16 @@
+
+
+set(OPENCV_VER opencv)
+
+pkg_check_modules(OPENCV opencv4)
+if (OPENCV_FOUND)
+    set(OPENCV_VER opencv4)
+endif(OPENCV_FOUND)
+
 rock_library(video_capture_vlc
     SOURCES VlcCapture.cpp
     HEADERS VlcCapture.h
-    DEPS_PKGCONFIG opencv
+    DEPS_PKGCONFIG ${OPENCV_VER}
     LIBS vlc harfbuzz freetype)
 
 Rock_executable(video_capture_vlc_stream Main.cpp
